Added Travis Build Status to Readme and did some HTML tweaks

--- a/lib/storage/body.html
+++ b/lib/storage/body.html
@@ -2,7 +2,7 @@
 <HTML>
   <body style="font-size: 18px; background-color: black">
     <table align="center" style="border: 5px; border-color: white">
-      <tr style="border: 5px; color: white">
+      <tr style="border: 5px; color: yellow">
         <td><h2>Description</h2></td>
         <td><h2>Example</h2></td>
       </tr>
