--- a/lib/storage/forms.html
+++ b/lib/storage/forms.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
  <HTML>
-    <body style="background-color: black; color: white">
+    <body style="background-color: black; color: yellow">
       <form action="search" method="get" align="center">
         <p><h2>Search Notes</h2></p>
         <p><input type="text" name="query" placeholder="Enter a word or words"></p>
