--- a/lib/storage/new_notes_form.html
+++ b/lib/storage/new_notes_form.html
@@ -4,10 +4,10 @@
      <link rel="stylesheet" type="text/css" href="notes.css">
   </head>
     <body>
-      <form action="search" method="get">
+      <form action="search" method="post">
         <p><h2>Add Your Notes</h2></p>
-        <textarea rows="10" cols="25">"Enter a description per line"</textarea>
-        <textarea rows="10" cols="25">"Enter an example per line"</textarea>
+        <textarea rows="10" cols="25" name="description">"Enter a description per line"</textarea>
+        <textarea rows="10" cols="25" name="example">"Enter an example per line"</textarea>
         <p><input type="text" name="query" placeholder="Enter a word or words"></p>
         <p><input class="button"; type="submit" value="Submit Notes"></p>
       </form>
